# FalaiseArt

./: .gitignore  CMakeLists.txt  README.md  README_examples.md  testLinkage.cc
FLArt/: CMakeLists.txt
FLArt/Examples/: FLExampleProducer_module.cc  README.md
FLArt/RawDataProducts/: CMakeLists.txt  RawGeigerHit.h  RawGeigerHitCollection.h  classes.h  classes_def.xml
FLFacade/: CMakeLists.txt  README.md
FLFacade/DataModels/: CMakeLists.txt  DataModel.md  README.md  classes.h  classes_def.xml  event_header.cc  event_header.h  event_header.ipp  timestamp.cc  timestamp.h  timestamp.ipp
FLFacade/Dictionaries/Bayeux/: CMakeLists.txt  classes.h  classes_def.xml
FLFacade/Sources/: BrioInputSource_source.cc  CMakeLists.txt
FLFacade/programs/: CMakeLists.txt  brio_dump.cc
FLFacade/programs/archive/: README.md  brio_portability_test.cc
cmake/: UPSPostShim.cmake  UPSPreShim.cmake
cpp_examples/: CMakeLists.txt  fhicl-id.cc
cpp_examples/fcl/: BasicProlog.fcl  PartialProlog.fcl  PrologPartOne.fcl  PrologPartTwo.fcl  basic_perm0.fcl  basic_perm1.fcl  basic_perm10.fcl  basic_perm11.fcl  basic_perm2.fcl  basic_perm3.fcl  basic_perm4.fcl  basic_perm5.fcl  basic_perm6.fcl  basic_perm7.fcl  basic_perm8.fcl  basic_perm9.fcl
example_scripts/: README.md  fifth_print.fcl  first.fcl  second_error.fcl
fcl/: CMakeLists.txt
fcl/examples/: eighth.fcl  exampleAnalyzer.fcl  exampleDumper.fcl  exampleProducer.fcl  exampleProducer2.fcl  fifth.fcl  first.fcl  ninth.fcl
fcl/snemo/: MockCalibration.fcl  StandardServices.fcl
fcl/snemo_examples/: CalibrationAnalysis.fcl
programs/: CMakeLists.txt  brio_dump.cc  brio_portability_test.cc  flreconstruct.bash.in  test_xml_reader.cc
snemo/: BrioInputSource_source.cc  CMakeLists.txt  MockCalibrationAnalyzer_module.cc  SDInputAnalyzer_module.cc
snemo/Examples/: CMakeLists.txt  FLExampleAnalyzer_module.cc  FLExampleConfigurableProducer_module.cc  FLExampleInputSource_source.cc  FLExampleProducer_module.cc  README.md
snemo/RawDataProducts/: CMakeLists.txt  CalorimeterDigit.h  CalorimeterDigitCollection.h  CalorimeterFEBData.h  GeigerDigit.h  GeigerDigitCollection.h  classes.h  classes_def.xml
snemo/datamodel/: CMakeLists.txt  CalorimeterHit.h  CalorimeterHitCollection.h  GeigerHit.h  GeigerHitCollection.h  GenBBPrimaryEvent.h  StepHit.h  StepHitCollection.h  bayeux_dict.cc  classes.h  classes_def.xml  event_header.cc  event_header.h  event_header.ipp  timestamp.cc  timestamp.ipp
snemo/processing/: CMakeLists.txt  MockCalorimeterCalibrator_module.cc  MockCalorimeterModel.cc  MockCalorimeterModel.h  MockGeigerCalibrator_module.cc
snemo/services/: CMakeLists.txt  FooService.h  FooService_service.cc  GeometryService.h  GeometryService_service.cc  KernelService.h  KernelService_service.cc  README.md  ResourceService.h  ResourceService_service.cc  VariantService.h  VariantService_service.cc
snemo/test/: BrioInputSource_t.fcl  CMakeLists.txt  CalibrationAnalyzer_t.fcl  Calibration_t.fcl  DataFlow_t.fcl  SDInputAnalyzerFromArt_t.fcl  SDInputAnalyzerFromBrio_t.fcl  Services_t.fcl
snemo_externals/: bayeux-3.3.0.patch  snemo_externals.cmake
ups/: product_deps
